--- a/Tetris-Hardware/platformio.ini
+++ b/Tetris-Hardware/platformio.ini
@@ -12,4 +12,15 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps  = .piolibdeps
+lib_deps  = 
+ # Using a library name
+  FastLED
+  # ... or using library Id
+  126
+  # ... or depend on a specific version
+  FastLED@3.2.6
+  # Semantic Versioning Rules
+  # http://docs.platformio.org/page/userguide/lib/cmd_install.html#description
+  FastLED@^3.2.6
+  FastLED@~3.2.6
+  FastLED@>=3.2.6
